Progress on datasheets
Currently parsing Unit name, Ranged Weapons, Keywords, and Melee weapons.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # Default ignored files
 .idea
 node_modules
+datasources/Orks.pdf
+datasources/4czxZwZf5cZCT7dk.pdf
+datasources/H5pO90rzYSAY6dHG.pdf
+datasources/Tau.pdf
+datasources/YWdVWS6bgzMSMsNo.pdf
